<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    app:behavior_hideable="false"
    app:behavior_peekHeight="200dp"
    app:behavior_skipCollapsed="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourlyWeatherRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="24"
            tools:listitem="@layout/item_hourly_sheet" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/hourlyWeatherRV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pressureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/pressure_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourlyWeatherRV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayPressureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hourlyWeatherRV"
            tools:text="1 atm" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/humidity_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressureTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayHumidityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/displayPressureTV"
            app:layout_constraintTop_toBottomOf="@id/displayPressureTV"
            tools:text="94 %" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uviTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/uvi_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayUviTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/displayHumidityTV"
            app:layout_constraintTop_toBottomOf="@+id/displayHumidityTV"
            tools:text="0.09" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/visibilityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/visibility_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uviTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayVisibilityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/displayUviTV"
            app:layout_constraintTop_toBottomOf="@+id/displayUviTV"
            tools:text="0.09" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cloudTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/cloud_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visibilityTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayCloudTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/displayVisibilityTV"
            app:layout_constraintTop_toBottomOf="@id/displayVisibilityTV"
            tools:text="75 %" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/windSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/windSpeed_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cloudTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayWindTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/displayCloudTV"
            app:layout_constraintTop_toBottomOf="@id/displayCloudTV"
            tools:text="0 Km/h" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>