<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="200dp"
    android:id="@+id/nextDaySheet"
    android:visibility="gone"
    app:behavior_skipCollapsed="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nextDayWeatherRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="24"
            tools:listitem="@layout/item_hourly_sheet" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/nextDayWeatherRV"
            android:background="?android:attr/listDivider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayPressureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/pressure_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextDayWeatherRV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayDisplayPressureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextDayWeatherRV"
            tools:text="1 atm" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/humidity_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextDayPressureTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayDisplayHumidityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/nextDayDisplayPressureTV"
            app:layout_constraintTop_toBottomOf="@id/nextDayDisplayPressureTV"
            tools:text="94 %" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayUviTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/uvi_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextDayHumidity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayDisplayUviTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/nextDayDisplayHumidityTV"
            app:layout_constraintTop_toBottomOf="@+id/nextDayDisplayHumidityTV"
            tools:text="0.09" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayCloudTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/cloud_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextDayUviTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayDisplayCloudTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/nextDayDisplayUviTV"
            app:layout_constraintTop_toBottomOf="@id/nextDayDisplayUviTV"
            tools:text="75 %" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayWindSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/windSpeed_string"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextDayCloudTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextDayDisplayWindTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/nextDayDisplayCloudTV"
            app:layout_constraintTop_toBottomOf="@id/nextDayDisplayCloudTV"
            tools:text="0 Km/h" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>